# dbrownell_Common

./: .copier-answers.yml  .gitignore  ActivateEpilog.py  BootstrapEpilog.py  Build.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  minisign_key.pub  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/package/: action.yml
.github/actions/standard/: action.yml
.github/actions/validate/: action.yml
.github/workflows/: CICD.yml  CICD_impl.yml  codeql.yml  scorecard.yml  standard.yaml  standard.yml
src/: AutoGitSemVer.yaml
src/dbrownell_Common/: ContextlibEx.py  ExecuteTasks.py  InflectEx.py  PathEx.py  SubprocessEx.py  TextwrapEx.py  TyperEx.py  Types.py  __init__.py
src/dbrownell_Common/Streams/: Capabilities.py  DoneManager.py  StreamDecorator.py  TextWriter.py
src/dbrownell_Common/TestHelpers/: StreamTestHelpers.py
tests/: ContextlibEx_UnitTest.py  ExecuteTasks_TestManual.py  ExecuteTasks_UnitTest.py  InflectEx_UnitTest.py  PathEx_UnitTest.py  SubprocessEx_UnitTest.py  TextwrapEx_UnitTest.py  TyperEx_UnitTest.py  Types_UnitTest.py
tests/Streams/: Capabilities_UnitTest.py  DoneManager_UnitTest.py  StreamDecorator_UnitTest.py  TextWriter_UnitTest.py
tests/TestHelpers/: StreamTestHelpers_UnitTest.py
tests/dbrownell_Common/: ContextlibEx_UnitTest.py  ExecuteTasks_TestManual.py  ExecuteTasks_UnitTest.py  PathEx_UnitTest.py  SubprocessEx_UnitTest.py  TextwrapEx_UnitTest.py  TyperEx_UnitTest.py  Types_UnitTest.py
tests/dbrownell_Common/Streams/: Capabilities_UnitTest.py  DoneManager_UnitTest.py  StreamDecorator_UnitTest.py
